--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "bootstrap": "^4.5.3",
     "classnames": "^2.2.6",
     "firebase": "^8.2.10",
+    "i18next": "^19.9.2",
+    "i18next-browser-languagedetector": "^6.0.1",
+    "i18next-xhr-backend": "^3.2.2",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "ra-data-json-server": "^3.10.4",
@@ -23,10 +26,12 @@
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-firebaseui": "^4.1.0",
+    "react-i18next": "^11.8.10",
     "react-preloaders": "^3.0.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-slick": "^0.27.13",
+    "react-spinners": "^0.10.6",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^0.2.4"
   },
